--- a/catalogo/requirements.txt
+++ b/catalogo/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.5.3
-mySQL-python==1.2.3
-Pillow==1.2.3
+MySQL-python==1.2.3
+Pillow==1.2
 dj-static==0.0.6
 djangorestframework==2.3.14
 gunicorn==18.0
